<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:elevation="15dp"
    android:layout_height="wrap_content">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/newTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:background="@drawable/background_shape"
        android:padding="12dp"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/Heading_bottomSheets"
        android:hint="@string/new_task"
        android:textSize="28sp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/newDescription"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginHorizontal="22dp"
        android:background="@drawable/background_shape"
        android:padding="12dp"
        android:layout_below="@+id/newTaskTitle"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:hint="@string/description"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/AddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newDescription"
        android:layout_alignParentEnd="true"
        android:textSize="19sp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/background_shape"
        android:backgroundTint="#CE2DB3EF"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/Add_Button"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Heading_bottomSheets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/Add_Button"
        android:textSize="44sp" />


</RelativeLayout>